# sps_genai

./: README.md  pyproject.toml
app/: __init__.py  bigram_model.py  embeddings.py  main.py
